Fixed alignment

--- a/css/style.css
+++ b/css/style.css
@@ -165,7 +165,12 @@ nav ul li .active:visited
     flex: 1;
     display: flex;
     flex-direction: column;
+    align-items: center;
   }
+  .section-container article p{
+    text-align: center;
+  }
+
 
   footer{
     display: flex;
